# Cpp_Object_Manager

./: CMakeLists.txt  README.md  main.cpp
helpers/: CoverType.h  Reader.cpp  Reader.h  Updater.cpp  Updater.h  WeekDay.h  string.cpp
src/: UI.cpp  UI.h
src/objects/: Article.cpp  Article.h  Bestseller.cpp  Bestseller.h  Book.cpp  Book.h  Daily.cpp  Daily.h  Magazine.cpp  Magazine.h  MagazineType.h  Monthly.cpp  Monthly.h  Object_interface.cpp  Object_interface.h  PopularScience.cpp  PopularScience.h  Publisher.cpp  Publisher.h  Weekly.cpp  Weekly.h
src/structures/: Leaf.cpp  Leaf.h  Vertex.cpp  Vertex.h
